--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             class="hire2">Hire Me</button></a></i>
     </div>
     <div class="right">
-      <img src="myphot.png" alt="mypic" div data-aos="fade-up" data-aos-duration="500">
+      <img src="myphot" alt="mypic" div data-aos="fade-up" data-aos-duration="500">
     </div>
   </div>
   <!-- end Home -->
