--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- About -->
   <div class="about" id="aboutsection">
     <div class="left">
-      <img src="/abotpic.png" alt="pic">
+      <img src="/Apicture.png" alt="pic">
     </div>
     <div class="right">
       <h1>About me</h1>
